Fix issue 58: No logout button should be visible if not logged in Fix issue 60: Add link to Nurpawiki docs page to login screen.

--- a/files/style.css
+++ b/files/style.css
@@ -214,3 +214,8 @@ table.login_box {
 	padding: 5px;
 	margin-left: 400px;
 }
+
+a#login_help_url {
+    color : Black;
+    font-weight:bold;
+}
